--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -20,13 +20,13 @@ jobs:
       with:
         ref: aweikeji
     - name: Judge Time
-      id: in3Hours
+      id: in5Hours
       run: |
-        export hourAgo=$(git show --pretty=format:"%cr" | grep "hour" | head -n 1 | tr -cd "[0-9]")
-        echo "::set-output name=in3Hours::$(test $hourAgo -gt 5;echo $?)"
+        export hourAgo=$(git show --pretty=format:"%cr" | head -n 1 | awk '{if($2=="hours" && $1<=5) print($1);else if($2!="days") print($1)}')
+        echo "::set-output name=in5Hours::$hourAgo"
     - name: Get Newest File
       id: lastestFile
-      if: ${{ steps.in3Hours.outputs.in3Hours == 1 }} 
+      if: ${{ steps.in3Hours.outputs.in3Hours }} 
       run: |
         export lastestfile="$(ls -l | awk '{print $9}' | grep -e "keji$" | sort -n |tail -n 1)"
         echo "::set-output name=lastestFile::$lastestfile"
