--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,8 +1,9 @@
 name: Sync Others
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: '* */5 * * *' # 每3小时触发, 对于一些更新不那么频繁的项目可以设置为每天一次, 低碳一点
+    - cron: '0 */4 * * *'
 jobs:
   repo-sync:
     name: Sync Others
@@ -20,14 +21,14 @@ jobs:
       with:
         ref: aweikeji
     - name: Judge Time
-      id: in5Hours
+      id: inHours
       run: |
-        export hourAgo=$(git show --pretty=format:"%cr" | head -n 1 | awk '{if($2=="hours" && $1<=5) print($1);else if($2!="days") print($1)}')
-        echo "::set-output name=in5Hours::$hourAgo"
+        export hourAgo=$(git show --pretty=format:"%cr" | head -n 1 | awk '{if($2=="hours" && $1<=4) print($1);else if($2!="days") print($1)}')
+        echo "::set-output name=inHours::$hourAgo"
         echo $hourAgo
     - name: Get Newest File
       id: lastestFile
-      if: ${{ steps.in5Hours.outputs.in5Hours }} 
+      if: ${{ steps.inHours.outputs.inHours }} 
       run: |
         export lastestfile="$(ls -l | awk '{print $9}' | grep -e "keji$" | sort -n |tail -n 1)"
         echo "::set-output name=lastestFile::$lastestfile"
