--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Judge Time
       id: inHours
       run: |
-        export hourAgo=$(git log --pretty=format:"%cr" | head -n 1 | awk '{if($2=="hours" && $1<=4) print($2);else if($2!="days") print($2)}')
+        export hourAgo=$(git log --pretty=format:"%cr" | head -n 1 | awk '{if($2=="hours" && $1<=4) print($2);else if($2!="days" && $2!="hours") print($2)}')
         echo "::set-output name=inHours::$hourAgo"
         echo $hourAgo
     - name: Get Newest File
