--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -9,7 +9,7 @@ jobs:
     name: Sync Others
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.3.4
+    - uses: actions/checkout@v2.5.0
     - name: GitHub Repo Sync
       uses: repo-sync/github-sync@v2.3.0
       with:
@@ -17,39 +17,54 @@ jobs:
         source_branch: main
         destination_branch: aweikeji
         github_token: ${{ secrets.GITHUB_TOKEN }}
-    - uses: actions/checkout@v2.3.4
+    - uses: actions/checkout@v2.5.0
       with:
         ref: aweikeji
-    - name: Judge Time
-      id: inHours
+    - name: Latest CommitFile
+      id: latestCommitFile
       run: |
-        export hourAgo=$(git log --pretty=format:"%cr" | head -n 1 | awk '{if($2=="hours" && $1<=5) print($2);else if($2!="days" && $2!="hours") print($2)}')
-        echo "::set-output name=inHours::$hourAgo"
-        echo $hourAgo
-    - name: Get Newest File
-      id: lastestFile
-      if: ${{ steps.inHours.outputs.inHours }} 
-      run: |
-        export lastestfile="$(ls -l | awk '{print $9}' | grep -e "keji$" | sort -n |tail -n 1)"
-        echo "::set-output name=lastestFile::$lastestfile"
-        echo $lastestfile
-    - uses: actions/checkout@v2.3.4
+        git fetch origin aweikeji --depth=2
+        latestFile=$(git diff --name-only --diff-filter=AMT HEAD~1 HEAD | xargs -I{} -- git log -1 --format="%ci {}" {} | sort | tail -1)
+        echo "latestCommitFile=$latestFile" >> $GITHUB_OUTPUT
+        echo $latestFile
+    - uses: actions/checkout@v2.5.0
       with:
         ref: main
+    - name: Judge Time
+      id: judgeTime
+      if: ${{ steps.latestCommitFile.outputs.latestCommitFile }} 
+      run: |
+        if [[ -f _time ]]; then
+          record=$(head -1 _time)
+        else
+          touch _time
+        fi
+        
+        lastestCommitFile="${{ steps.latestCommitFile.outputs.latestCommitFile }}"
+        if [ "$record" != "$lastestCommitFile" ]; then
+          doFlag=true
+        fi
+      
+        echo $lastestCommitFile > _time
+        git add _time
+        echo "doFlag=$doFlag" >> $GITHUB_OUTPUT
+        echo $doFlag
     - name: Move files
       id: gitStatus
-      if: ${{ steps.lastestFile.outputs.lastestFile }}
+      if: ${{ steps.judgeTime.outputs.doFlag }}
       run: |
-          git checkout origin/aweikeji ${{ steps.lastestFile.outputs.lastestFile }}
-          mv ${{ steps.lastestFile.outputs.lastestFile }} clash_auto
-          git rm ${{ steps.lastestFile.outputs.lastestFile }}
+          remoteFileName=$(echo "${{ steps.latestCommitFile.outputs.latestCommitFile }}" | cut -d " " -f4)
+          git checkout origin/aweikeji $remoteFileName
+          mv $remoteFileName clash_auto
+          git rm $remoteFileName
           git add clash_auto
-          echo "::set-output name=gitStatus::$(git status -s)"
-          echo $(git status -s)
+          gitStatus="$(git status -s)"
+          echo "hadChanged=${#gitStatus}" >> $GITHUB_OUTPUT
+          echo $gitStatus
     - name: Commit files
-      if: ${{ steps.gitStatus.outputs.gitStatus }}
+      if: ${{ steps.gitStatus.outputs.hadChanged }}
       run: |
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git commit -am "Update Clash Auto" -a
     - name: Push changes
