--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -10,53 +10,60 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.5.0
-    - name: GitHub Repo Sync
+    - name: Sync Awikeji
       uses: repo-sync/github-sync@v2.3.0
       with:
         source_repo: https://github.com/ggborr/aweikeji
         source_branch: main
         destination_branch: aweikeji
         github_token: ${{ secrets.GITHUB_TOKEN }}
-    - uses: actions/checkout@v2.5.0
+    - name: Sync TopFreeProxies
+      uses: repo-sync/github-sync@v2.3.0
       with:
-        ref: aweikeji
-    - name: Latest CommitFile
-      id: latestCommitFile
+        source_repo: https://github.com/alanbobs999/TopFreeProxies
+        source_branch: master
+        destination_branch: TopFreeProxies
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Create Command
       run: |
-        git fetch origin aweikeji --depth=2
-        latestFile=$(git diff --name-only --diff-filter=AMT HEAD~1 HEAD | xargs -I{} -- git log -1 --format="%ci {}" {} | sort | tail -1)
-        echo "latestCommitFile=$latestFile" >> $GITHUB_OUTPUT
-        echo $latestFile
-    - uses: actions/checkout@v2.5.0
-      with:
-        ref: main
-    - name: Judge Time
-      id: judgeTime
-      if: ${{ steps.latestCommitFile.outputs.latestCommitFile }} 
-      run: |
-        if [[ -f _time ]]; then
-          record=$(head -1 _time)
-        else
-          touch _time
-        fi
-        
-        lastestCommitFile="${{ steps.latestCommitFile.outputs.latestCommitFile }}"
-        if [ "$record" != "$lastestCommitFile" ]; then
-          doFlag=true
-        fi
-      
-        echo $lastestCommitFile > _time
-        git add _time
-        echo "doFlag=$doFlag" >> $GITHUB_OUTPUT
-        echo $doFlag
-    - name: Move files
+         cat > moveProxiesToSync.sh <<- EOF
+            moveProxiesToSync() {
+              proxies=()
+              begin=0
+              while read -r line; do
+                if [[ \$begin == 1 ]]; then
+                  if [[ \$line =~ "^[ ]*-.*$" ]]; then
+                    proxies+=("\$line")
+                  else
+                    break;
+                  fi
+                fi
+                if [[ \$line == "proxies:" ]]; then
+                  begin=1
+                fi
+              done < \$1
+
+              for proxy in "\${proxies[@]}"; do
+                echo \$proxy >> \$2
+              done
+            }
+          EOF
+          source ./moveProxiesToSync.sh
+    - name: Merge files
       id: gitStatus
-      if: ${{ steps.judgeTime.outputs.doFlag }}
       run: |
-          remoteFileName=$(echo "${{ steps.latestCommitFile.outputs.latestCommitFile }}" | cut -d " " -f4)
-          git checkout origin/aweikeji $remoteFileName
-          mv $remoteFileName clash_auto
-          git rm $remoteFileName
+          git fetch origin aweikeji --depth=2
+          aweikejiFile=$( git diff --name-only --diff-filter=AMT awikeji~1 aweikeji | xargs -I{} -- git log -1 --format="%ci {}" {} | sort | tail -1 | cut -d " " -f4)
+          git checkout origin/aweikeji $aweikejiFile
+          git checkout origin/TopFreeProxies "Eternity.yaml"
+          
+          echo > "proxies:"
+          moveProxiesToSync $aweikejiFile clash_auto
+          moveProxiesToSync "Eternity.yaml" clash_auto
+          
+          git rm $aweikejiFile
+          git rm "Eternity.yaml" 
+          
           git add clash_auto
           gitStatus="$(git status -s)"
           echo "hadChanged=${#gitStatus}" >> $GITHUB_OUTPUT
