--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -18,8 +18,9 @@ jobs:
           getRemoteFile "https://github.com/alanbobs999/TopFreeProxies" master "Eternity.yaml"
           
           echo "proxies:" > clash_auto 
-          mergeFiles=$(ls merge*)
+          mergeFiles=(`ls merge*`)
           for mergeFile in "${mergeFiles[@]}"; do
+            echo $mergeFile
             moveProxiesToSync $mergeFile clash_auto
           done
           
