--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -14,18 +14,26 @@ jobs:
       run: |
           source ./.github/func.sh
           getRemoteFile "https://github.com/ggborr/aweikeji" main
-          getRemoteFile "https://github.com/alanbobs999/TopFreeProxies" master "Eternity.yaml"
+          getRemoteFile "https://github.com/freefq/free" master "v2" base64
     - name: Merge files
       run: |
           source ./.github/func.sh
-          echo "proxies:" > clash_auto 
-          mergeFiles=(`ls merge*`)
-          for mergeFile in "${mergeFiles[@]}"; do
-            echo $mergeFile
-            moveProxiesToSync $mergeFile clash_auto
+          
+          urlFiles=(`ls url*`)
+          for urlFile in "${urlFiles[@]}"; do
+            echo $urlFile
+            curl -o ready_$urlFile "https://api.v1.mk/sub?target=clash&url=$(urlEncode $urlFile)&insert=false&config=https%3A%2F%2Fraw.githubusercontent.com%2FMeilieage%2Fwebcdn%2Fmain%2Frule%2FArea_Media_NoAuto.ini&emoji=true&list=false&udp=false&tfo=false&expand=true&scv=false&fdn=false&new_name=true"
+            rm $urlFile
           done
           
-          rm -rf merge*
+          echo "proxies:" > clash_auto 
+          readyFiles=(`ls ready*`)
+          for readyFile in "${readyFiles[@]}"; do
+            echo $readyFile
+            moveProxiesToSync $readyFile clash_auto
+          done
+          
+          rm -rf ready*
     - name: Add files
       id: gitStatus   
       run: |
