--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -3,7 +3,7 @@ name: Sync Others
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */1 * * *'
+    - cron: '0 */2 * * *'
 jobs:
   repo-sync:
     name: Sync Others
@@ -18,12 +18,12 @@ jobs:
     - name: ConvertUrlToClash
       run: |
           source ./.github/func.sh
-          docker run -d --restart=always -p 25500:25500 tindy2013/subconverter:latest
+          docker run -d -p 2550:25500 tindy2013/subconverter:latest
           docker ps
           urlFiles=(`ls url*`)
           for urlFile in "${urlFiles[@]}"; do
             echo $urlFile
-            curl -o ready_$urlFile "http://127.0.0.1:25500/sub?target=clash&url=$(urlEncode $urlFile)"
+            curl -o ready_$urlFile "http://127.0.0.1:2550/sub?target=clash&url=$(urlEncode $urlFile)"
             rm $urlFile
           done
     - name: MergeReadyFiles
