--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -10,10 +10,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.5.0
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: GetRemoteFiles
       run: |
           source ./.github/func.sh
           getRemoteFile "https://github.com/freefq/free" master "v2" base64
+          
+          python ./.github/sub.py
     - name: ConvertUrlToClash
       run: |
           source ./.github/func.sh
