--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,9 +1,9 @@
 name: Sync Others
 
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: '0 */4 * * *'
+  repository_dispatch:
+    types:
+      - build
 jobs:
   repo-sync:
     name: Sync Others
